[gd_scene format=3 uid="uid://u2oo4ymv2b8y"]

[ext_resource type="Script" uid="uid://d4e8053oahxl0" path="res://addons/godot_ai_chat/scripts/ui/chat_ui.gd" id="1_ktmbx"]
[ext_resource type="Theme" uid="uid://bm6f43fgr7jjd" path="res://addons/godot_ai_chat/assets/big_yellow_scrollbar_theme.tres" id="2_p4tj1"]
[ext_resource type="PackedScene" uid="uid://yhavhbc6hmeu" path="res://addons/godot_ai_chat/scene/settings_panel.tscn" id="2_ufwtx"]
[ext_resource type="Texture2D" uid="uid://boc6f5o8bklo2" path="res://addons/godot_ai_chat/assets/streamline-ultimate-color--filter-text.svg" id="3_i3tmh"]
[ext_resource type="Texture2D" uid="uid://vwlbuhvfugwf" path="res://addons/godot_ai_chat/assets/material-icon-theme--folder-markdown.svg" id="4_qoxj2"]
[ext_resource type="Script" uid="uid://cb53othg76m5n" path="res://addons/godot_ai_chat/scripts/others/user_input.gd" id="5_p6hp2"]
[ext_resource type="Texture2D" uid="uid://dh54j33ru0odc" path="res://addons/godot_ai_chat/assets/streamline-sharp-color--cloud-wifi-flat.svg" id="7_grk0l"]
[ext_resource type="Texture2D" uid="uid://54q6istmwjt" path="res://addons/godot_ai_chat/assets/tool-screwdriver-svgrepo-com.svg" id="7_qjs14"]
[ext_resource type="Texture2D" uid="uid://brk43jkprsfdw" path="res://addons/godot_ai_chat/assets/streamline-sharp-color--mail-send-email-message-flat.svg" id="9_ulynj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a7m7s"]
bg_color = Color(0, 0.2535977, 0.58258927, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2kdn8"]
font_size = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w6mml"]
bg_color = Color(0.070537165, 0.13036937, 0.26785713, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qjs14"]
font_size = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cf2p2"]
bg_color = Color(0.40740654, 0.15687086, 0.44705883, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yewlv"]
font_size = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6j1bt"]
bg_color = Color(0.11236896, 0.24705882, 0.18459842, 0.627451)

[node name="ChatUI" type="Control" unique_id=1784100897]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ktmbx")

[node name="Panel" type="Panel" parent="." unique_id=922495982]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TabContainer" type="TabContainer" parent="." unique_id=1948711098]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Chat" type="MarginContainer" parent="TabContainer" unique_id=1574301994]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Chat" unique_id=1931601258]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StatusLabel" type="Label" parent="TabContainer/Chat/VBoxContainer" unique_id=2121040211]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_a7m7s")
text = "Ready"
label_settings = SubResource("LabelSettings_2kdn8")
vertical_alignment = 1
text_overrun_behavior = 1

[node name="ChatTrunDisplay" type="Label" parent="TabContainer/Chat/VBoxContainer" unique_id=968373152]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_w6mml")
text = "Turns:"
label_settings = SubResource("LabelSettings_qjs14")
vertical_alignment = 1
text_overrun_behavior = 1

[node name="CurrentTokenCost" type="Label" parent="TabContainer/Chat/VBoxContainer" unique_id=430120038]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_cf2p2")
text = "Token Cost: Total: 0 (Prompt: 0, Completion: 0)"
label_settings = SubResource("LabelSettings_yewlv")
vertical_alignment = 1
text_overrun_behavior = 1

[node name="ColorRect" type="ColorRect" parent="TabContainer/Chat/VBoxContainer" unique_id=1622656640]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
mouse_filter = 2
color = Color(0.18039216, 0.18039216, 0.18039216, 1)

[node name="ChatDisplayView" type="MarginContainer" parent="TabContainer/Chat/VBoxContainer" unique_id=1462151435]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Chat/VBoxContainer/ChatDisplayView" unique_id=176257922]
layout_mode = 2
theme = ExtResource("2_p4tj1")

[node name="ChatListContainer" type="VBoxContainer" parent="TabContainer/Chat/VBoxContainer/ChatDisplayView/ScrollContainer" unique_id=1200744928]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ChatArchiveContainer" type="HBoxContainer" parent="TabContainer/Chat/VBoxContainer" unique_id=733507829]
layout_mode = 2

[node name="ChatArchiveSelector" type="OptionButton" parent="TabContainer/Chat/VBoxContainer/ChatArchiveContainer" unique_id=186243956]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_color = Color(0.34901962, 0.9490196, 0.4117647, 1)
disabled = true
text_overrun_behavior = 1
fit_to_longest_item = false

[node name="DeleteButton" type="Button" parent="TabContainer/Chat/VBoxContainer/ChatArchiveContainer" unique_id=887043830]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Delete Current Chat"
theme_override_colors/font_hover_color = Color(0.34901962, 0.9490196, 0.4117647, 1)
text = "Delete"
text_overrun_behavior = 2

[node name="LoadChatButton" type="Button" parent="TabContainer/Chat/VBoxContainer/ChatArchiveContainer" unique_id=388608477]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Load Chat"
theme_override_colors/font_hover_color = Color(0.34901962, 0.9490196, 0.4117647, 1)
text = "Load"
text_overrun_behavior = 2

[node name="NewChatButton" type="Button" parent="TabContainer/Chat/VBoxContainer/ChatArchiveContainer" unique_id=1174113039]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "New Chat"
theme_override_colors/font_hover_color = Color(0.34901962, 0.9490196, 0.4117647, 1)
text = "New"
text_overrun_behavior = 2

[node name="NetworkContainer" type="HBoxContainer" parent="TabContainer/Chat/VBoxContainer" unique_id=2081664670]
layout_mode = 2

[node name="ModelSelector" type="OptionButton" parent="TabContainer/Chat/VBoxContainer/NetworkContainer" unique_id=535508631]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_color = Color(0.34901962, 0.9490196, 0.4117647, 1)
disabled = true
text_overrun_behavior = 1
selected = 0
fit_to_longest_item = false
item_count = 1
popup/item_0/text = "Connecting..."
popup/item_0/id = 0

[node name="ModelNameFilterInput" type="LineEdit" parent="TabContainer/Chat/VBoxContainer/NetworkContainer" unique_id=212915694]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Filter Model Name"
clear_button_enabled = true
caret_blink = true
right_icon = ExtResource("3_i3tmh")

[node name="ReconnectButton" type="Button" parent="TabContainer/Chat/VBoxContainer/NetworkContainer" unique_id=903059472]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_color = Color(0.34901962, 0.9490196, 0.4117647, 1)
text = "Reconnection"
icon = ExtResource("7_grk0l")
text_overrun_behavior = 1
expand_icon = true

[node name="UserInput" type="TextEdit" parent="TabContainer/Chat/VBoxContainer" unique_id=100000477]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6
theme_override_styles/focus = SubResource("StyleBoxFlat_6j1bt")
placeholder_text = "Input Here"
wrap_mode = 1
indent_wrapped_lines = true
scroll_smooth = true
caret_blink = true
script = ExtResource("5_p6hp2")

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Chat/VBoxContainer" unique_id=1128191836]
layout_mode = 2

[node name="SaveAsMarkdownButton" type="Button" parent="TabContainer/Chat/VBoxContainer/HBoxContainer" unique_id=1557382607]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Save Current Chat as Markdown"
theme_override_colors/font_hover_color = Color(0.34901962, 0.9490196, 0.4117647, 1)
text = "Save as Markdown"
icon = ExtResource("4_qoxj2")
text_overrun_behavior = 1
expand_icon = true

[node name="ToolSelectorButton" type="MenuButton" parent="TabContainer/Chat/VBoxContainer/HBoxContainer" unique_id=208769348]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_color = Color(0.34901962, 0.9490196, 0.4117647, 1)
text = "Tools"
icon = ExtResource("7_qjs14")
text_overrun_behavior = 1
expand_icon = true

[node name="SendButton" type="Button" parent="TabContainer/Chat/VBoxContainer/HBoxContainer" unique_id=1719100201]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_color = Color(0.3490821, 0.9490196, 0.412919, 1)
text = "Send"
icon = ExtResource("9_ulynj")
text_overrun_behavior = 2
expand_icon = true

[node name="Settings" type="MarginContainer" parent="TabContainer" unique_id=1397559023]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="SettingsPanel" parent="TabContainer/Settings" unique_id=933366852 instance=ExtResource("2_ufwtx")]
layout_mode = 2

[node name="FileDialog" type="FileDialog" parent="." unique_id=1325562377]
oversampling_override = 1.0
title = "Open a Directory"
size = Vector2i(1600, 1400)
min_size = Vector2i(1600, 1400)
file_mode = 2
display_mode = 1

[node name="AcceptDialog" type="AcceptDialog" parent="." unique_id=1907732757]
initial_position = 1
size = Vector2i(600, 400)
min_size = Vector2i(600, 400)
dialog_text = "Connection failed. Is the API URL correct and the server running?"
dialog_autowrap = true
